tests/outputs/cif_cod_check_006.out
scripts/cif_cod_check: tests/cases/cif_cod_check_006.inp(34,39) data_2009397: syntax error:
_symmetry_space_group_name_H-M  'R 3' ccc
                                      ^
scripts/cif_cod_check: tests/cases/cif_cod_check_006.inp: 1 error(s) encountered while parsing CIF data
